@@ -1012,6 +1012,7 @@ gtk_im_context_simple_commit_char (GtkIMContext *context,
       context_simple->tentative_match = 0;
       context_simple->tentative_match_len = 0;
       g_signal_emit_by_name (context_simple, "preedit_changed");
+      g_signal_emit_by_name (context_simple, "preedit_end");
     }
 
   g_signal_emit_by_name (context, "commit", &buf);
@@ -1355,6 +1356,7 @@ gtk_im_context_simple_filter_keypress (GtkIMContext *context,
 	      context_simple->compose_buffer[0] = 0;
 	      
 	      g_signal_emit_by_name (context_simple, "preedit_changed");
+	      g_signal_emit_by_name (context_simple, "preedit_end");
 	    }
 
 	  return TRUE;
@@ -1364,7 +1366,7 @@ gtk_im_context_simple_filter_keypress (GtkIMContext *context,
     }
 
   /* Ignore modifier key presses */
-  for (i=0; i < G_N_ELEMENTS (gtk_compose_ignore); i++)
+  for (i = 0; i < G_N_ELEMENTS (gtk_compose_ignore); i++)
     if (event->keyval == gtk_compose_ignore[i])
       return FALSE;
 
@@ -1417,6 +1419,9 @@ gtk_im_context_simple_filter_keypress (GtkIMContext *context,
 	}
 
       g_signal_emit_by_name (context_simple, "preedit_changed");
+
+      if (!context_simple->in_hex_sequence)
+        g_signal_emit_by_name (context_simple, "preedit_end");
       
       return TRUE;
     }
@@ -1450,6 +1455,7 @@ gtk_im_context_simple_filter_keypress (GtkIMContext *context,
       context_simple->modifiers_dropped = FALSE;
       context_simple->tentative_match = 0;
 
+      g_signal_emit_by_name (context_simple, "preedit_start");
       g_signal_emit_by_name (context_simple, "preedit_changed");
   
       return TRUE;
@@ -1508,6 +1514,9 @@ gtk_im_context_simple_filter_keypress (GtkIMContext *context,
 	  
 	  g_signal_emit_by_name (context_simple, "preedit_changed");
 
+	  if (!context_simple->in_hex_sequence)
+	    g_signal_emit_by_name (context_simple, "preedit_end");
+
 	  return TRUE;
         }
     }
@@ -1542,6 +1551,7 @@ gtk_im_context_simple_reset (GtkIMContext *context)
       context_simple->tentative_match = 0;
       context_simple->tentative_match_len = 0;
       g_signal_emit_by_name (context_simple, "preedit_changed");
+      g_signal_emit_by_name (context_simple, "preedit_end");
     }
 }
 
