@@ -1,3 +1,10 @@
+2008-03-15  Matthias Clasen  <mclasen@redhat.com>
+
+	Merged from trunk:
+
+	* gtk/gtkimcontextsimple.c: Emit preedit_start/_end as
+	appropriate.  (#521934, Huang Peng)
+
 2008-03-13  Sven Neumann  <sven@gimp.org>
 
 	Merged from trunk:
